fix: mobile size search bar spacing

--- a/src/styles/quasar.styl
+++ b/src/styles/quasar.styl
@@ -122,8 +122,8 @@ border-bottom: 1px solid #E0E0E0;
                   color: $primary;
                     font-size: 1.55em !important;
                       }
-                      .mobile-search-padding {
-                        padding: 0px 7px;
+                      .mobile-search-margin {
+                        margin: 0px 9px;
                         }
                         .mobile-header-padding {
                           padding: 0 5px;
@@ -170,8 +170,8 @@ border-bottom: 1px solid #E0E0E0;
                       color: $primary;
                       font-size: 1.36em !important;
                       }
-                      .mobile-search-padding {
-                          padding: 0px 7px;
+                      .mobile-search-margin {
+                        margin: 0px 9px;
                         }
                         .mobile-scroll-header {
                           border-bottom: 1px solid #E0E0E0 !important;
@@ -195,6 +195,9 @@ border-bottom: 1px solid #E0E0E0;
             background-color: black;
             -webkit-mask: url(../assets/logo.svg) no-repeat center;
             }
+            .mobile-search-margin {
+              margin: 0px 9px;
+                }
             .mobile-size-component-header {
               font-size: 4.7vw;
                 img {
